(#2) refactor event loop architecture